--- a/ui/src/app/app.component.sass
+++ b/ui/src/app/app.component.sass
@@ -22,6 +22,8 @@ button.add-url
     display: flex
     padding-left: 5px
     padding-right: 5px
+.folder-dropdown-menu .input-group-text
+    width: 181px
 
 .metube-section-header
     font-size: 1.8rem
